# University-Projects

./: README.md
Semester 1/FP/: README.md
Semester 1/FP/A1/: p2.py
Semester1/ASC/: PracticalExam
Semester1/ASC/Lab11/: MMCdigit.asm  MMCmain.asm
Semester1/ASC/Lab2/: 1.asm  2.asm  3.asm  4.asm  5.asm
Semester1/ASC/Lab3/: 1.asm  2.asm  3.asm  4.asm
Semester1/ASC/Lab4/: 1.asm
Semester1/ASC/Lab5/: 1.asm
Semester1/ASC/Lab6/: 1.asm
Semester1/ASC/Lab8/: 1.asm  2.asm
Semester1/FP/: README.md  p1.py
Semester1/FP/A1/: p3.py
Semester1/FP/A10/: README.md
Semester1/FP/A11/: README.md
Semester1/FP/A2/: README.md  program.py
Semester1/FP/A3/: program.py
Semester1/FP/A4/: functions.py  start.py  ui.py
Semester1/FP/A5/: start.py
Semester1/FP/CodeRunners/: code_runners.py
Semester1/FP/Hangman/: main.py  sentences.txt
Semester1/FP/Scramble/: input.txt  main.py
Semester2/DSA/: MultiMapSLL-Lab2
Semester2/DSA/Map-Lab1/: App.cpp  MapIterator.cpp  README.md  ShortTest.cpp
Semester2/DSA/MapDA-Lab1/: ExtendedTest.cpp  Map.cpp  Map.h  MapIterator.h  README.md
Semester2/OOP/: A8-9
Semester3/PLF/: L1.lisp  L2.lisp  L3.lisp  P1.pl  P2.pl  P3.pl
Semester4/SDI/Lab3/MusicApp/: db.sqlite3  pyproject.toml
Semester4/SDI/Lab3/MusicApp/Music/: admin.py  models.py  serializer.py  urls.py  views.py
Semester4/SDI/Lab3/MusicApp/Music/migrations/: 0001_initial.py  0003_artist.py  0005_alter_album_main_artist_alter_album_nr_of_tracks_and_more.py  0006_remove_song_label_performson.py
Semester4/SDI/Lab3/MusicApp/MusicApp/: settings.py
(+988 files in other folders)
